# libngc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CMake.yml
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  ngc.c  ngc.h
tests/: CMakeLists.txt  test1.c  test1.out  test2.c  test2.out  test3.c  test3.out  test4.c
